--- a/apps/blog-admin/configuration/nginx.conf
+++ b/apps/blog-admin/configuration/nginx.conf
@@ -1,11 +1,12 @@
 server_tokens off;
 
 server {
-    listen       3001;
-    server_name  localhost;
+    listen       80; # Listen on the standard HTTP port
+    server_name  censmart-dj4a.onrender.com; # Use your Render domain
+
     location / {
-        root   /usr/share/nginx/html;
+        root   /usr/share/nginx/html; # Ensure this points to your site's directory
         index  index.html index.htm;
-        try_files $uri /index.html;
+        try_files $uri /index.html; # Serve your single-page app correctly
     }
 }
