--- a/apps/blog-admin/.env
+++ b/apps/blog-admin/.env
@@ -1,2 +1,2 @@
-PORT=80
-REACT_APP_SERVER_URL=https://censmart-dj4a.onrender.com
+# PORT=80
+# REACT_APP_SERVER_URL=https://censmart-dj4a.onrender.com
