--- a/apps/blog-admin/configuration/nginx.conf
+++ b/apps/blog-admin/configuration/nginx.conf
@@ -1,8 +1,8 @@
 server_tokens off;
 
 server {
-    listen       80; # Listen on the standard HTTP port
-    server_name  censmart-dj4a.onrender.com; # Use your Render domain
+    listen       3001; # Listen on the standard HTTP port
+    server_name  localhost; # Use your Render domain
 
     location / {
         root   /usr/share/nginx/html; # Ensure this points to your site's directory
