removed the stress

--- a/apps/blog-admin/configuration/nginx.conf
+++ b/apps/blog-admin/configuration/nginx.conf
@@ -1,12 +1,12 @@
 server_tokens off;
 
 server {
-    listen       3001; # Listen on the standard HTTP port
-    server_name  localhost; # Use your Render domain
+    listen       ${PORT}; # Use the PORT environment variable
+    # server_name  _; # Catch-all, or omit this line
 
     location / {
-        root   /usr/share/nginx/html; # Ensure this points to your site's directory
+        root   /usr/share/nginx/html;
         index  index.html index.htm;
-        try_files $uri /index.html; # Serve your single-page app correctly
+        try_files $uri /index.html;
     }
 }
